--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <link rel="stylesheet" href="style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>game</title>
     </head>
-    <body>
-        <input class="duck-check" type="checkbox" />
-        <h1 class="content-info">0</h1>
+    <body class="body">
+        <div class="duck duck_1">
+            <input id="duck1" class="duck-check" type="checkbox" />
+            <label for="duck1">
+                <img class="duck__fly" src="duck-fly.png" alt="duck1"
+            /></label>
+        </div>
+        <div class="duck duck_2">
+            <input id="duck2" class="duck-check" type="checkbox" />
+            <label for="duck2">
+                <img class="duck__fly" src="duck-fly.png" alt="duck2"
+            /></label>
+        </div>
+        <div class="duck duck_3">
+            <input id="duck3" class="duck-check" type="checkbox" />
+            <label for="duck3">
+                <img class="duck__fly" src="duck-fly.png" alt="duck3"
+            /></label>
+        </div>
+        <div class="duck duck_4">
+            <input id="duck4" class="duck-check" type="checkbox" />
+            <label for="duck4">
+                <img class="duck__fly" src="duck-fly.png" alt="duck4"
+            /></label>
+        </div>
+        <div class="duck duck_5">
+            <input id="duck5" class="duck-check" type="checkbox" />
+            <label for="duck5">
+                <img class="duck__fly" src="duck-fly.png" alt="duck5"
+            /></label>
+        </div>
+        <h1 class="content-info"></h1>
     </body>
 </html>
