--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
         <div class="duck duck_1">
             <input id="duck1" class="duck-check" type="checkbox" />
             <label for="duck1">
-                <img class="duck__fly" src="duck-fly.png" alt="duck1"
+                <img class="duck__fly" src="duck.gif" alt="duck1"
             /></label>
         </div>
         <div class="duck duck_2">
             <input id="duck2" class="duck-check" type="checkbox" />
             <label for="duck2">
-                <img class="duck__fly" src="duck-fly.png" alt="duck2"
+                <img class="duck__fly" src="duck.gif" alt="duck2"
             /></label>
         </div>
         <div class="duck duck_3">
             <input id="duck3" class="duck-check" type="checkbox" />
             <label for="duck3">
-                <img class="duck__fly" src="duck-fly.png" alt="duck3"
+                <img class="duck__fly" src="duck.gif" alt="duck3"
             /></label>
         </div>
         <div class="duck duck_4">
             <input id="duck4" class="duck-check" type="checkbox" />
             <label for="duck4">
-                <img class="duck__fly" src="duck-fly.png" alt="duck4"
+                <img class="duck__fly" src="duck.gif" alt="duck4"
             /></label>
         </div>
         <div class="duck duck_5">
             <input id="duck5" class="duck-check" type="checkbox" />
             <label for="duck5">
-                <img class="duck__fly" src="duck-fly.png" alt="duck5"
+                <img class="duck__fly" src="duck.gif" alt="duck5"
             /></label>
         </div>
         <h1 class="content-info"></h1>
